methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:2: error: type mismatch;
 found   : Unit
 required: Boolean
  for (i <-1 to 50){
         ^