methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  for (i <-1 to 50){
  droite()
  }
}